# rocm-xio

./: .gitignore  .wordlist.txt  CONTRIBUTING.md
.github/workflows/: build-check.yml  ctest-no-hardware.yml  deb-build.yml  release.yml  test-emulate.yml
cmake/: XIOTestHelpers.cmake
debian/: changelog  gen-changelog.sh
docs/: index.rst
docs/conceptual/: test-ep.rst
docs/doxygen/: Doxyfile.in
docs/how-to/: testing.rst
docs/reference/: api.rst
scripts/test/: test-nvme-ep-data-verification.sh  test-nvme-ep-random-write-verify.sh
src/common/: endian.hpp  ibv-wrapper.hpp  rdma-numa-wrapper.hpp  rdma-topology.hpp  xio-common.hip  xio-data-pattern.hpp  xio-env.h
src/endpoints/nvme-ep/: nvme-ep.h  nvme-ep.hip
src/endpoints/rdma-ep/: gda-backend.hpp  queue-pair.hpp  rdma-ep.h  rdma-ep.hip  vendor-ops.hpp
src/endpoints/sdma-ep/: anvil.hip  anvil.hpp  sdma-ep.h  sdma-ep.hip
src/endpoints/test-ep/: README.md  test-ep.hip
src/include/: rocm-xio-uapi.h  xio-endpoint-core.h  xio-endpoint-registry.h  xio-timing.h  xio.h
src/tester/: xio-cli-options.cpp
tests/: CMakeLists.txt
tests/system/nvme-ep/: CMakeLists.txt  run-nvme-smoke-test.sh
tests/system/test-ep/: CMakeLists.txt  run-test-ep-cli.sh  test-ep-emulate-delay.hip  test-ep-emulate-doorbell.hip  test-ep-emulate-multithread.hip  test-ep-emulate-timing.hip
tests/unit/: CMakeLists.txt
tests/unit/common/: CMakeLists.txt  test-pci-mmio-bridge.hip  test-tcp-exchange-layout.hip  test-xio-com.hip  test-xio-env.hip  test-xio-timing.hip
tests/unit/nvme-ep/: test-nvme-helpers.hip
tests/unit/rdma-ep/: CMakeLists.txt  test-rdma-backend-config.hip  test-rdma-common.hip  test-rdma-config.hip
tests/unit/scripts/: CMakeLists.txt
tests/unit/sdma-ep/: CMakeLists.txt  test-sdma-config.hip  test-sdma-packet-layout.hip
tests/unit/test-ep/: CMakeLists.txt  test-ep-config.hip  test-ep-launch-cpu-threads.hip
tests/unit/tester/: CMakeLists.txt  test-xio-cli-options.hip
